--- a/package.json
+++ b/package.json
@@ -25,23 +25,26 @@
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "recoil": "^0.3.1"
+    "recoil": "^0.3.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/react": "17.0.14",
+    "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^4.28.4",
     "@typescript-eslint/parser": "^4.28.4",
     "eslint": "7.31.0",
     "eslint-config-next": "^11.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-import-access": "^1.0.0-beta",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "husky": "^7.0.0",
-    "lint-staged": "^11.0.1",
-    "msw": "^0.32.2",
+    "lint-staged": "^11.1.0",
+    "msw": "^0.33.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.3.2",
     "typescript": "4.3.5"
